添加发送邮件设置

--- a/src/main/java/express.zh_CN.properties
+++ b/src/main/java/express.zh_CN.properties
@@ -1,1 +1,8 @@
 Salt=avadfa%^%\#\!&\#%^fdafafa~@$%^$&&^%&erere}{}*(*&*^
+Esteem=\u5C0A\u656C\u7684
+User=\u7528\u6237
+EmailAddress=306602097@qq.com
+EmailPassword=请输入你的授权码
+KEY_SMTP=mail.smtp.host
+SERVER_SMTP=smtp.qq.com
+EmailUserName=306602097
