--- a/src/main/java/express.zh_CN.properties
+++ b/src/main/java/express.zh_CN.properties
@@ -6,3 +6,5 @@ EmailPassword=rxoedluzhovtcadc
 KEY_SMTP=mail.smtp.host
 SERVER_SMTP=smtp.qq.com
 EmailUserName=306602097
+PleaseCheckYourPassword=\u8BF7\u8F93\u5165\u6B63\u786E\u7684\u5BC6\u7801
+PleaseCheckYourUserId=\u8D26\u6237\u4E0D\u5B58\u5728
