新增登录模块图片验证码

--- a/src/main/java/express.zh_CN.properties
+++ b/src/main/java/express.zh_CN.properties
@@ -20,3 +20,5 @@ SERVER_SMTP=smtp.qq.com
 EmailUserName=306602097
 PleaseCheckYourPassword=\u8BF7\u8F93\u5165\u6B63\u786E\u7684\u5BC6\u7801
 PleaseCheckYourUserId=\u8D26\u6237\u4E0D\u5B58\u5728
+PleaseCheckYourImageCode=\u9A8C\u8BC1\u7801\u9519\u8BEF
+
